# rdflib-ucum

./: .gitignore  README.md  gitignore  pyproject.toml
src/rdflib_ucum/: __init__.py  exceptions.py  namespace.py  quantity.py  registration.py  sparql_functions.py  sparql_operators.py  unit.py  unit_mapping.py
src/rdflib_ucum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py  test_01_parsing_and_registration.py  test_02_namespace.py  test_03_equality_and_hash.py  test_04_comparison.py  test_05_arithmetic.py  test_06_conversion_and_compound.py  test_06_sparql.py  test_07_sparql.py  test_08_edge_cases.py  test_08_rdf_roundtrip.py  test_09_edge_cases.py
